--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -238,9 +238,8 @@ section > .btn {
 
 /* images */
 img{
-  float:left;
-  margin:10px;
-  width:30%;
+  float:center;
+  width:80%;
 }
 
 
@@ -338,15 +337,6 @@ td .report-user {
 tr{
   text-align:left
 }
-/* 
-tr > td:nth-child(4),
-tr > td:nth-child(5) {
-  text-align: center;
-} */
-/* 
-tr > td:last-child {
-  text-align: center;
-} */
 
 /* User reports */
 .user-reports {
@@ -365,6 +355,103 @@ tr > td:last-child {
 .report-img {
   width: 200px;
   height: auto;
+}
+
+/* user */
+
+[class*="coru-"]:before {
+  font-family: 'coru', sans-serif;
+}
+.title-user {
+  color: #333;
+  font-family: "Coda", sans-serif;
+  text-align: center;
+}
+.title-user span {
+  color: #55acee;
+}
+
+.user-profile {
+  margin: auto;
+	width: 25em; 
+  height: 11em;
+  background: #fff;
+  border-radius: .3em;
+}
+
+.user-profile  .username {
+  margin: auto;
+  margin-top: -4.40em;
+  margin-left: 5.80em;
+  color: #658585;
+  font-size: 1.53em;
+  font-family: "Coda", sans-serif;
+  font-weight: bold;
+}
+.user-profile  .bio {
+  margin: auto;
+  display: inline-block;
+  margin-left: 10.43em;
+  color: #e76043; 
+  font-size: .87em;
+  font-family: "varela round", sans-serif;
+}
+.user-profile > .description {
+  margin: auto;
+  margin-top: 1.35em;
+  margin-right: 4.43em;
+  width: 14em;
+  color: #c0c5c5; 
+  font-size: .87em;
+  font-family: "varela round", sans-serif;
+}
+.user-profile > img.avatar {
+	padding: .7em;
+  margin-left: .3em;
+  margin-top: .3em;
+  height: 6.23em;
+  width: 6.23em;
+  border-radius: 18em;
+}
+
+.user-profile ul.data {
+	margin: 2em auto;
+	height: 3.70em;
+  background: #4eb6b6;
+  text-align: center;
+  border-radius: 0 0 .3em .3em;
+}
+.user-profile li {
+	margin: 0 auto;
+  padding: 1.30em; 
+  width: 33.33334%;
+  display: table-cell;
+  text-align: center;
+}
+
+.user-profile span {
+	font-family: "varela round", sans-serif;
+	color: #e3eeee;
+  white-space: nowrap;
+  font-size: 1.27em;
+  font-weight: bold;
+}
+.user-profile span:hover {
+  color: #daebea;
+}
+
+.vote > h1 {
+  display: block;
+  text-align: center;
+  clear: both;
+  font-family: "Coda", sans-serif;
+  color: #343f3d;
+  line-height: 6;
+  font-size: 1.6em;
+}
+.vote > h1 a {
+  text-decoration: none;
+  color: #ea4c89;
 }
 
 /* For smartphones (<768px) */
